@@ -1,3 +1,11 @@
+*** 20010805_7 by leeh
+- dont allow duplicate IP klines
+
+
+*** 20010805_6 by leeh
+- fixed unkline to remove tkline ips
+
+
 *** 20010805_5 by jdc
 - Minor cleanups.
 
